# Tonalite

./: .gitignore  .gitmodules  .travis.yml  98-uDMX.rules  CMakeLists.txt  LICENSE  README.md  app.html  app.min.html  appveyor.yml  binding.gyp  build-sass.bat  build.bat  build.sh  buttons.py  client.html  client.py  cue_control.html  currentShow.json  error-Fri Dec 28 2018 14:02:54 GMT-0500 (Eastern Standard Time).txt  error-Fri Dec 28 2018 14:02:57 GMT-0500 (Eastern Standard Time).txt  index.html  index.js  index.min.html  main.py  mobile.html  mobile_new.html  open-source-licenses.txt  package-lock.json  package.json  phone-mockup.xd  presets.html  presets.min.html  pyudmx.py  run.bat  test.py  tests.py  tonalite  tonalite-lin.spec  tonalite-win.spec  (+4 more)
.github/: FUNDING.yml
chips/: rgb.json  rgba.json  rgbw.json
cppsrc/: functions.cpp  functions.h  main.cpp
docs/: Makefile  README.md  SUMMARY.md  book.json  conf.py  configuration.md  grandmaster_and_blackout.md  index.rst  installation.md  keyboard_shortcuts.md  login.md  make.bat  show.md  supported_hardware.md  supported_software.md  website.css
effects/: Accelerate.json  Accelerate2.json  Accordion.json  Accordion2.json  Aqua.json  Circle.json  Clover.json  Concentric.json  Cornfield.json  Cosine.json  Cosine2.json  DiscoBoy.json  DiscoBoy2.json  Drunken.json  Flag.json  Flames.json  Flicker.json  Flicker2.json  Flower.json  FreakOut.json  GoodVibrations.json  Gridlines.json  Harlequin.json  Heart.json  HelterSkelter.json  HelterSkelter2.json  HulaHoop.json  Infinity.json  Jagged.json  Lightning.json  Lightning2.json  Lissajou.json  Meadow.json  Metronome.json  Metronome2.json  MissPinky.json  Mondrian.json  Morse.json  Morse2.json  Mountain.json  (+44 more)
fixtures/: costech_stage_par.jlib  costech_stage_par.json  dimmer.json  generic_dimmer.jlib  generic_dimmer.json  generic_rgb.jlib  generic_rgb.json  generic_rgba.jlib  (+13 more)
src/: .json.hpp.swp  CMakeLists.txt  e131.cpp  structs.hpp  tonalite.cpp  utilities.cpp  utilities.hpp  utitities.hpp
(+227 files in other folders)
