cmake_minimum_required(VERSION 3.5.1)
set (CMAKE_CXX_STANDARD 11)
project (tonalite)
add_executable(Testing src/test/test.cpp)
add_executable(tonalite src/tonalite.cpp src/e131.cpp src/utilities.cpp src/uWebSockets/src/Extensions.cpp src/uWebSockets/src/Group.cpp src/uWebSockets/src/Networking.cpp src/uWebSockets/src/Hub.cpp src/uWebSockets/src/Node.cpp src/uWebSockets/src/WebSocket.cpp src/uWebSockets/src/HTTPSocket.cpp src/uWebSockets/src/Socket.cpp src/uWebSockets/src/Epoll.cpp src/uWebSockets/src/Room.cpp)
target_link_libraries(tonalite ssl crypto pthread)
find_package( ZLIB REQUIRED )
if ( ZLIB_FOUND )
    include_directories( ${ZLIB_INCLUDE_DIRS} )
    target_link_libraries( tonalite ${ZLIB_LIBRARIES} )
endif( ZLIB_FOUND )